Use composer to autoload files for us
We still need to roll our own file loader at this point since composer
won't load *.class.php files.

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,14 @@
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/var-dumper": "^3.2",
         "phpunit/phpunit": "^5.7"
+    },
+    "autoload": {
+        "files": ["src/phpjs.php"],
+        "exclude-from-classmap": ["tests/"]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "phpjs\\tests\\": "tests/"
+        }
     }
 }
