--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "phpunit/phpunit": "^5.7"
     },
     "autoload": {
-        "files": ["src/phpjs.php"],
+        "psr-4": {
+            "Rowbot\\DOM\\": "src/"
+        },
         "exclude-from-classmap": ["tests/"]
     },
     "autoload-dev": {
