--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ramsey/uuid": "^3.7"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.7",
+        "squizlabs/php_codesniffer": "3.*",
         "symfony/var-dumper": "^3.2",
         "phpunit/phpunit": "^5.7"
     },
