--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=7.1",
         "ext-mbstring": "*",
-        "ramsey/uuid": "^3.7"
+        "ramsey/uuid": "^3.7",
+        "rowbot/url": "^1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
