--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,16 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
         "symfony/var-dumper": "^3.2",
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
             "Rowbot\\DOM\\": "src/"
-        },
-        "exclude-from-classmap": ["tests/"]
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "Rowbot\\DOM\\tests\\": "tests/"
+            "Rowbot\\DOM\\Tests\\": "tests/"
         }
     }
 }
