--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=7.1",
         "ext-mbstring": "*",
-        "rowbot/url": "^1.0"
+        "rowbot/url": "3.1.1"
     },
     "config": {
         "sort-packages": true
