--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
         "sort-packages": true
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5.1",
+        "phpstan/phpstan": "^0.12.75",
         "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
-        "slevomat/coding-standard": "^6.3"
+        "slevomat/coding-standard": "^6.3",
+        "squizlabs/php_codesniffer": "^3.5.1"
     },
     "autoload": {
         "psr-4": {
